[package]
name = "current-block-time"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio-native-tls = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"
serde_json = "1.0"
serde = {version = "1", features = ["derive"]}
thiserror = "1.0"
